--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,48 @@
 body{
 font-family: 'Roboto', sans-serif;
 }
+
+.list {
+    list-style: none;
+}
+.link {
+    text-decoration: none;
+}
+
+
+
+.header {
+
+}
+
+.header-navigation {
+
+}
+
+.header-list {
+    
+}
+
+.header-item {
+
+}
+
+.header-link {
+    /* Body Medium */
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1,5;
+        letter-spacing: 0.02em;
+            color: #2E2F42;
+}
+
+.address {}
+
+.address-list {}
+
+.address-item {}
+
+.address-mail {}
+
+.address-tel {}
+
