--- a/css/styles.css
+++ b/css/styles.css
@@ -9,32 +9,34 @@ font-family: 'Roboto', sans-serif;
     text-decoration: none;
 }
 
+.header {}
 
+.header-navigation {}
 
-.header {
+.header-logo {}
 
-}
+.logo {}
 
-.header-navigation {
+.header-list {}
 
-}
+.list {}
 
-.header-list {
-    
-}
-
-.header-item {
-
-}
+.header-item {}
 
 .header-link {
-    /* Body Medium */
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1,5;
-        letter-spacing: 0.02em;
-            color: #2E2F42;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    /* identical to box height, or 150% */
+    
+    letter-spacing: 0.02em;
+    
+    /* NAVY BLUE */
+    
+    color: #2E2F42;
 }
+
+.link {}
 
 .address {}
 
@@ -45,4 +47,6 @@ font-family: 'Roboto', sans-serif;
 .address-mail {}
 
 .address-tel {}
+
+
 
