--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,37 @@ font-family: 'Roboto', sans-serif;
     text-decoration: none;
 }
 
+
+
+/*фон героя и футера /* NAVY BLUE */
+/* background: #2E2F42; */ 
+
+/* основной фон */
+/*  background: #E5E5E5;*/
+
+/* фон наша команда */
+/* background: #F4F4FD;/* 
+
+/* цвет шапки
+background: #FFFFFF;
+border-bottom: 1px solid #E7E9FC;
+/* CORNFLOWER */
+
+/* цвет телеф и почта
+/* color: #434455; SLATE */
+
+/* цвет web верх
+ /*color: #4D5AE5; IRIS */
+
+/* studio от лого верх
+ /*color: #2E2F42;NAVY BLUE */
+
+/* цвет studio низ
+/* color: #F4F4FD;CLOUD */
+
+
+
+
 .header-list .link {
         font-weight: 500;
         font-size: 16px;
@@ -20,6 +51,12 @@ font-family: 'Roboto', sans-serif;
     
         color: #2E2F42;
 }
-
+.header-list .link:hover,
+.header-list .link:focus{
+    color: #b41010
+}
+.address-list .link {
+    color:#434455;
+}
 
 
