--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,9 @@ color: #FFFFFF; */
 .header {
     background-color: #FFFFFF;
 }
+.header .logo {
+        text-transform: uppercase;
+}
 .header-list .link {
         font-weight: 500;
         font-size: 16px;
@@ -111,9 +114,20 @@ color: #FFFFFF; */
     color: var(--title-text-color);
 }
 
+/* WORK */
+.work .title {
+    color: var(--primary-text-color);
+}
+.work .subtitle {
+    color: var(--primary-text-color);
+}
+
 /* FOOTER */
 .footer {
     background-color: #2E2F42;
+}
+.footer .stile {
+        text-transform: uppercase;
 }
 .footer .content {
     color: #E7E9FC;
