--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,8 @@ color: #FFFFFF; */
 
 body {
 font-family: 'Roboto', sans-serif;
-background-color: #E5E5E5;
+color: #434455;
+background-color: #FFFFFF;
 }
 
 .list {
@@ -55,46 +56,107 @@ background-color: #E5E5E5;
     background-color: #FFFFFF;
 }
 .header .logo {
-        text-transform: uppercase;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.33;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5AE5;
+
+    text-transform: uppercase;
 }
+.header .logos {
+    font-weight: 800;
+        font-size: 18px;
+        line-height: 1.33;
+        display: flex;
+        align-items: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #2E2F42;
+}
+
 .header-list .link {
-        font-weight: 500;
+font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+        color: var(--primary-text-color);
+}
+
+.header-list .link:hover,
+.header-list .link:focus {
+    color: #404bbf
+}
+.address-list .link {
+    font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: var(--primary-text-color);
-}
-.header-list .link:hover,
-.header-list .link:focus{
-    color: #b41010
-}
-.address-list .link {
     color:var(--title-text-color);
 }
-
+.address-list .link:hover,
+.address-list .link:focus {
+    color: #404bbf;
+}
 /* HERO */
 .hero-section {
     background-color: #2E2F42;
 }
 .hero .subject {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+}
+.hero-section .btn {
+    background-color: #4D5AE5
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
     color: #FFFFFF;
 }
 
-
+.hero-section .btn:hover,
+.hero-section .btn:focus {
+    background-color: #404BBF;
+}
 /* SECTION */
 .section {
     background: #E5E5E5;
 }
+
 .feature-list .title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
     color: var(--primary-text-color);
 }
 .feature-list .subtitle {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: var(--title-text-color);
 }
 
 /* IMAGES */
 
 .section-images {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
     color: var(--primary-text-color);
 }
 
