--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ background-color: #FFFFFF;
 
 /* WORK */
 
-.work .title {
+.work .title-link {
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 20px;
@@ -256,7 +256,7 @@ background-color: #FFFFFF;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
 }
-.work .subtitle {
+.work .subtitle-link {
     font-family: 'Roboto';
 font-weight: 400;
 font-size: 16px;
