--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,12 @@ color: #FFFFFF; */
 }
 
 body {
-font-family: 'Roboto', sans-serif;
+font-family: 'Roboto', sans-serif, 'Raleway';
 color: #434455;
 background-color: #FFFFFF;
 }
 .btn {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif,;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -73,6 +73,7 @@ background-color: #FFFFFF;
     
 
 .header-navigation .logo {
+    font-family: 'Raleway';
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
@@ -80,10 +81,12 @@ background-color: #FFFFFF;
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    font-style: normal;
     color: #4D5AE5;
 
 }
 .header-navigation .logos {
+    font-family: 'Raleway';
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
@@ -91,6 +94,7 @@ background-color: #FFFFFF;
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    font-style: normal;
     color: var(--primary-text-color);
 }
 
@@ -124,7 +128,7 @@ background-color: #FFFFFF;
 .hero-section {
     font-size: 56px;
     line-height: 1.07;
-    text-align: center;
+    text-align: center;    
     letter-spacing: 0.02em;
     color: #FFFFFF;
     text-transform: none;
@@ -139,18 +143,18 @@ background-color: #FFFFFF;
     color: #FFFFFF;
 }
 
-.hero .btn {
+.hero .hero-btn {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    cursor: pointer;
     color: #FFFFFF;
 }
 
 .hero .btn:hover,
 .hero .btn:focus {
+    cursor: pointer;
     background-color: #404bbf;
 }
 
@@ -237,7 +241,7 @@ background-color: #FFFFFF;
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-    color: var(--button-color);
+    color: #FFFFFF;
     background-color: #F4F4FD;
 }
 .btn:hover,
