--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ background-color: #FFFFFF;
 
 /* WORK */
 
-.work .title-link {
+.work-list .link {
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 20px;
