--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@
 }
 
 body {
-font-family: 'Roboto', sans-serif,'Raleway';
+font-family: 'Roboto', sans-serif;
 color: var(--title-text-color);
 background-color: var(--white-background);
 font-style: normal;
@@ -197,6 +197,11 @@ font-style: normal;
 }
 /* OUR TEAM */
 .section-team {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--dark);
     background-color: var(--light);
 }
 .section-title {
