--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ font-style: normal;
 }
 
 .hero-btn {
-    font-family:'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -241,13 +241,14 @@ font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-    color: var(--white-background);
+    color: var(--button-color);
     background-color: var(--light);
         }
+
 .btn:hover,
 .btn:focus {
-    background-color: var(--button-color);
-    color: var(--white-background);
+    background-color: var(--pressed-state);
+    color: var(--white-background));
 }
 .list {
     list-style: none;
