--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ font-style: normal;
 
 .hidden-navigation {}
 
-.meta-btn {
+.btn {
     font-family:'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
