--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,6 @@ font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-    background-color: var(--button-color);
 }
 .list {
     list-style: none;
@@ -232,7 +231,7 @@ a {
 
 .hidden-navigation {}
 
-.btn {
+.meta-btn {
     font-family:'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
