--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ background-color: var(--white-background);
 font-style: normal;
 }
 .btn {
-    font-family: 'Roboto', sans-serif,;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -149,6 +149,8 @@ a {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
     color: var(--white-background);
     letter-spacing: 0.04em;
     background-color: var(--button-color);
