--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ a {
 
 .hidden-navigation {}
 
-.btn {
+.list .btn {
     font-family:'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
