--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ a {
     background-color: var(--primary-text-color);
 }
 
-.hero-btn {
+.hero .hero-btn {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
