--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ a {
     background-color: var(--primary-text-color);
 }
 
-.hero .hero-btn {
+.hero-btn {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -153,12 +153,12 @@ a {
     cursor: pointer;
     color: var(--white-background);
     letter-spacing: 0.04em;
-    background-color: var(--button-color);
     cursor: pointer;
+    background-color: var(--button-color);
 }
 
-.hero .hero-btn:hover,
-.hero .hero-btn:focus {
+.hero-btn:hover,
+.hero-btn:focus {
     background-color: var(--pressed-state);
 }
 
