--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ a {
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    color: var(--white-background);
     background-color: var(--button-color);
 }
 .hero-btn:hover,
