--- a/css/styles.css
+++ b/css/styles.css
@@ -106,12 +106,19 @@ a {
 .address {
     font-style: normal;
 }
-.address-list .link {
+.mail .link {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:var(--title-text-color);
+}
+.tel .link {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
 }
 .address-list .link:hover,
 .address-list .link:focus {
