--- a/css/styles.css
+++ b/css/styles.css
@@ -107,12 +107,14 @@ a {
     font-style: normal;
 }
 .mail .link {
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:var(--title-text-color);
 }
 .tel .link {
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
