--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ a {
 .address {
     font-style: normal;
 }
-.address .link {
+.address-item {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
