--- a/css/styles.css
+++ b/css/styles.css
@@ -106,14 +106,14 @@ a {
 .address {
     font-style: normal;
 }
-.address .link {
+.address-link {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:var(--title-text-color);
 }
-.address .link {
+.address-link {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
