--- a/css/styles.css
+++ b/css/styles.css
@@ -106,13 +106,13 @@ a {
 .address {
     font-style: normal;
 }
-.address .link {
+.address-list .link {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:var(--title-text-color);
 }
-.address .link {
+.address-list .link {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
