--- a/css/styles.css
+++ b/css/styles.css
@@ -106,31 +106,20 @@ a {
 .address {
     font-style: normal;
 }
-.address-list .link {
+.address-link {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:var(--title-text-color);
 }
-.address-list .link {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--title-text-color);
-}
-.address-list .link:hover,
-.address-list .link:focus {
+
+.address-link:hover,
+.address-link:focus {
     color: var(--pressed-state);
 }
 /* HERO */
 
 .hero-section {
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;    
-    letter-spacing: 0.02em;
-    color: var(--white-background);
-    text-transform: none;
     background-color: var(--primary-text-color);
 }
 .hero-subject {
@@ -140,7 +129,6 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--white-background);
-    background-color: var(--primary-text-color);
 }
 
 .hero-btn {
@@ -163,14 +151,14 @@ a {
 
 }
 
-.title {
+.feature-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
 }
-.subtitle {
+.feature-subtitle {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -204,14 +192,14 @@ a {
 .team-item {
     background-color: #ffffff;
 }
-.title {
+.team-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
 }
-.subtitle {
+.team-subtitle {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -250,7 +238,6 @@ a {
 /* WORK */
 
 .title-link {
-    font-family:'Roboto';
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -258,7 +245,6 @@ a {
     color: var(--primary-text-color);
 }
 .work-list .link {
-    font-family: 'Roboto';
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -266,8 +252,6 @@ a {
     color: var(--primary-text-color);
 }
 .work .subtitle-link {
-    font-family:'Roboto';
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -306,7 +290,6 @@ a {
     text-decoration: none
 }
 .footer .content {
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
